[package]
name = "minerva-mbedtls"
version = "0.5.0"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "minerva_mbedtls"

[features]
default = []
std = []

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "da77a48" }
#psa-crypto      = { path = "/ssw/projects/trentonio/rust-psa-crypto/psa-crypto" }
psa-crypto = { git = "https://github.com/AnimaGUS-minerva/rust-psa-crypto", rev = "52aa2c4", features=["minerva"] }

