[package]
name = "minerva-mbedtls"
version = "0.5.4"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "minerva_mbedtls"

[features]
default = []
std = []

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "da77a48" }
psa-crypto = { git = "https://github.com/AnimaGUS-minerva/rust-psa-crypto", rev = "b62d500", features=["minerva"] }
#psa-crypto      = { path = "/ssw/projects/trentonio/rust-psa-crypto/psa-crypto", features=["minerva", "operations"] }

